--- a/_config.yml
+++ b/_config.yml
@@ -7,20 +7,21 @@ safe: false
 
 ### site serving configuration ###
 exclude: [CNAME, README.md, .gitignore]
-permalink: / ## disables post output
+permalink: /:title ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
+highlighter: rouge
 
 
 ### content configuration ###
-title:       "SinglePaged - Title: Edit me in _config.yml!"
-keywords:    "SinglePaged, jekyll, template, github, blog, single page"
-description: "A single-page template for Jekyll based blogs (like what you'd use on github pages!)"
-source_link: "https://github.com/t413/SinglePaged"
-favicon:     #put a path like: "img/favicon.ico"
-touch_icon:  #put a path like: "img/apple-touch-icon.png"
-google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
+title:       "Jaskamal Kainth"
+keywords:    "Graduate Student, BITS Pilani, Samsung, Programmer, Mathematician, Research, Personal Page"
+description: "Jaskamal Kainth's Personal Website"
+source_link: "https://github.com/Jaskamalkainth/jaskamalkainth.github.io"
+favicon:     "img/favicon.ico"
+touch_icon:  "img/apple-touch-icon.png"
+google_analytics_key: UA-77340824-1 ## put YOUR key here to enable tracking! (blank to disable)
 
 
 ### template colors, used site-wide via css ###
@@ -35,4 +36,9 @@ colors:
 
 kramdown:
   auto_ids:  false
+
+
+
+
+  
 
